--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <html lang="en">
   <head>
     <title>Recien Llegadas</title>
@@ -128,10 +126,7 @@
         );
       }
     </script>
-    <script id="_wau7ei">
-      var _wau = _wau || [];
-      _wau.push(["dynamic", "olivio", "7ei", "ffffffffffff", "small"]);
-    </script>
-    <script async src="//waust.at/d.js"></script>
+    
+    <script id="_wau8sl">var _wau = _wau || []; _wau.push(["dynamic", "2ph1hfpy1c", "8sl", "c4302bffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
   </body>
 </html>
