--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Traviesas y Bandidas Venezolanas</title>
-  <meta property="og:image" content="https://i.postimg.cc/htnKTWD3/0p39248so.jpg" />
+  <meta property="og:image" content="https://i.postimg.cc/MT9z2xLr/s8oznlk7v.jpg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet" />
   <link rel="icon" href="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" />
